<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orderingFromXml="true"
    app:iconSpaceReserved="false">

    <EditTextPreference
        android:defaultValue="@string/settings_prefix_default"
        android:key="url_preference"
        android:selectAllOnFocus="true"
        android:summary="@string/settings_prefix_summary"
        android:title="@string/settings_prefix_title"
        app:iconSpaceReserved="false" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="archive_preference"
        android:summary="@string/archive_summary"
        android:title="@string/archive_title"
        app:iconSpaceReserved="false" />
</PreferenceScreen>